--- a/environment-fixed.yaml
+++ b/environment-fixed.yaml
@@ -1,21 +1,19 @@
-name: reporter4
 channels:
   - pytorch
   - conda-forge
   - defaults
 dependencies:
   - asn1crypto=0.24.0=py37_1003
-  - atk=2.25.90=hb9dd440_1002
+  - atk=2.32.0=haf93ef1_0
   - beautifulsoup4=4.7.1=py37_1001
   - blinker=1.4=py_1
   - boto=2.49.0=py_0
-  - boto3=1.9.163=py_0
-  - botocore=1.12.163=py_0
+  - boto3=1.9.174=py_0
   - bz2file=0.98=py_0
   - bzip2=1.0.6=h14c3975_1002
-  - ca-certificates=2019.3.9=hecc5488_0
+  - ca-certificates=2019.6.16=hecc5488_0
   - cairo=1.16.0=ha4e643d_1000
-  - certifi=2019.3.9=py37_0
+  - certifi=2019.6.16=py37_0
   - cffi=1.12.3=py37h8022711_0
   - chardet=3.0.4=py37_1003
   - click=7.0=py_0
@@ -24,20 +22,20 @@ dependencies:
   - dbus=1.13.6=he372182_0
   - docutils=0.14=py37_1001
   - entrypoints=0.3=py37_1000
-  - expat=2.2.5=hf484d3e_1002
+  - expat=2.2.5=he1b5a44_1003
   - flake8=3.7.7=py37_0
   - flask=1.0.3=py_0
   - fontconfig=2.13.1=he4413a7_1000
   - freetype=2.10.0=he983fc9_0
-  - gdk-pixbuf=2.36.12=h49783d7_1002
+  - gdk-pixbuf=2.36.12=h7a26e22_1003
   - gensim=3.7.3=py37he1b5a44_0
   - gettext=0.19.8.1=hc5be6a0_1002
-  - glib=2.58.3=hf63aee3_1001
-  - gobject-introspection=1.58.2=py37h2da5eee_1000
+  - glib=2.58.3=h6f030ca_1001
+  - gobject-introspection=1.58.2=py37h5503ade_1001
   - graphite2=1.3.13=hf484d3e_1000
   - gstreamer=1.14.5=h36ae1b5_0
   - gtk2=2.24.31=hb68c50a_1001
-  - harfbuzz=2.4.0=h37c48d4_0
+  - harfbuzz=2.4.0=h37c48d4_1
   - icu=58.2=hf484d3e_1000
   - idna=2.8=py37_1000
   - intel-openmp=2019.4=243
@@ -54,13 +52,13 @@ dependencies:
   - libcblas=3.8.0=7_openblas
   - libedit=3.1.20170329=hf8c457e_1001
   - libffi=3.2.1=he1b5a44_1006
-  - libgcc-ng=8.2.0=hdf63c60_1
+  - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libiconv=1.15=h516909a_1005
   - liblapack=3.8.0=7_openblas
   - libpng=1.6.37=hed695b0_0
   - libpq=10.6=h13b8bad_1000
-  - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.0.10=h57b8799_1003
   - libuuid=2.32.1=h14c3975_1000
   - libxcb=1.13=h14c3975_1002
@@ -79,7 +77,7 @@ dependencies:
   - openblas=0.3.5=h9ac9557_1001
   - openssl=1.0.2r=h14c3975_0
   - pandas=0.24.2=py37hb3f55d8_0
-  - pango=1.40.14=h4ea9474_1004
+  - pango=1.40.14=he7ab937_1005
   - pcre=8.41=hf484d3e_1003
   - pip=19.1.1=py37_0
   - pixman=0.34.0=h14c3975_1003
@@ -110,12 +108,12 @@ dependencies:
   - sip=4.18.1=py37hf484d3e_1000
   - six=1.12.0=py37_1000
   - smart_open=1.8.4=py_0
-  - soupsieve=1.9.1=py37_0
-  - sqlalchemy=1.3.4=py37h516909a_0
+  - soupsieve=1.9.2=py37_0
+  - sqlalchemy=1.3.5=py37h516909a_0
   - sqlite=3.28.0=h8b20d00_0
   - tk=8.6.9=hed695b0_1002
-  - tornado=6.0.2=py37h516909a_0
-  - tqdm=4.32.1=py_0
+  - tornado=6.0.3=py37h516909a_0
+  - tqdm=4.32.2=py_0
   - twython=3.7.0=py_0
   - urllib3=1.24.3=py37_0
   - uwsgi=2.0.18=py37hf36b3d6_0
@@ -129,7 +127,7 @@ dependencies:
   - xorg-libxdmcp=1.1.3=h516909a_0
   - xorg-libxext=1.3.4=h516909a_0
   - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-libxt=1.1.5=h14c3975_1002
+  - xorg-libxt=1.2.0=h516909a_0
   - xorg-renderproto=0.11.1=h14c3975_1002
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h14c3975_1007
@@ -139,15 +137,18 @@ dependencies:
   - zstd=1.4.0=h3b9ef0a_0
   - pip:
     - ansible==2.8.1
-    - awscli==1.16.173
+    - awscli==1.16.185
+    - botocore==1.12.175
     - colorama==0.3.9
     - flask-sqlalchemy==2.4.0
     - janome==0.3.9
     - jsonlines==1.2.0
+    - libsass==0.19.2
     - mojimoji==0.0.8
-    - psycopg2-binary==2.8.2
+    - psycopg2-binary==2.8.3
     - pyasn1==0.4.5
     - pypugjs==5.8.1
     - rsa==3.4.2
     - toml==0.10.0
     - torchtext==0.3.1
+
