--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
 multi_line_output=3
-known_third_party=flask_sqlalchemy,sass
+known_third_party=boto3,botocore,flask_sqlalchemy,jsonlines,mojimoji,sass
