--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [flake8]
 max-line-length = 120
+
+[isort]
+multi_line_output=3
+known_third_party=boto3,botocore,flask_sqlalchemy,jsonlines,mojimoji,sass
+
+[tool:pytest]
+addopts = --verbose --cov=reporter
