--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,14 @@ max-line-length = 120
 
 [isort]
 multi_line_output=3
-known_third_party=boto3,botocore,flask_sqlalchemy,jsonlines,mojimoji,sass
+known_third_party=
+    boto3
+    botocore
+    flask_sqlalchemy
+    jsonlines
+    mojimoji
+    nltk
+    sass
 
 [tool:pytest]
 addopts = --verbose --cov=reporter
