--- a/environment-fixed.yaml
+++ b/environment-fixed.yaml
@@ -5,21 +5,25 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - asn1crypto=0.24.0=py37_1003
+  - atomicwrites=1.3.0=py_0
+  - attrs=19.1.0=py_0
   - beautifulsoup4=4.8.0=py37_0
-  - boto3=1.9.212=py_0
-  - botocore=1.12.212=py_0
-  - bzip2=1.0.8=h516909a_0
-  - ca-certificates=2019.6.16=hecc5488_0
-  - certifi=2019.6.16=py37_1
+  - boto3=1.9.239=py_0
+  - botocore=1.12.239=py_0
+  - bzip2=1.0.8=h516909a_1
+  - ca-certificates=2019.9.11=hecc5488_0
+  - certifi=2019.9.11=py37_0
   - cffi=1.12.3=py37h8022711_0
   - click=7.0=py_0
+  - coverage=4.5.4=py37h516909a_0
   - cryptography=2.5=py37hb7f436b_1
   - docutils=0.15.2=py37_0
   - entrypoints=0.3=py37_1000
   - flake8=3.7.8=py37_1
   - flask=1.1.1=py_1
-  - icu=64.2=he1b5a44_0
+  - icu=64.2=he1b5a44_1
   - idna=2.8=py37_1000
+  - importlib_metadata=0.23=py37_0
   - intel-openmp=2019.4=243
   - isort=4.3.21=py37_0
   - itsdangerous=1.1.0=py_0
@@ -38,24 +42,31 @@ dependencies:
   - libopenblas=0.3.7=h6e990d7_1
   - libpq=10.6=h13b8bad_1000
   - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libxml2=2.9.9=hee79883_2
+  - libxml2=2.9.9=hee79883_5
   - markupsafe=1.1.1=py37h14c3975_0
   - mccabe=0.6.1=py_1
   - mkl=2019.4=243
+  - more-itertools=7.2.0=py_0
   - ncurses=6.1=hf484d3e_1002
   - ninja=1.9.0=h6bb024c_0
   - nltk=3.4.4=py_0
-  - numpy=1.17.0=py37h95a1406_0
+  - numpy=1.17.2=py37h95a1406_0
   - openssl=1.0.2r=h14c3975_0
-  - pandas=0.25.0=py37hb3f55d8_0
+  - packaging=19.2=py_0
+  - pandas=0.25.1=py37hb3f55d8_0
   - pcre=8.41=hf484d3e_1003
-  - pip=19.2.2=py37_0
+  - pip=19.2.3=py37_0
+  - pluggy=0.13.0=py37_0
   - psycopg2=2.7.7=py37hb7f436b_0
+  - py=1.8.0=py_0
   - pycodestyle=2.5.0=py_0
   - pycparser=2.19=py37_1
   - pyflakes=2.1.1=py_0
   - pyopenssl=19.0.0=py37_0
-  - pysocks=1.7.0=py37_0
+  - pyparsing=2.4.2=py_0
+  - pysocks=1.7.1=py37_0
+  - pytest=5.2.0=py37_0
+  - pytest-cov=2.7.1=py_0
   - python=3.7.0=hd21baee_1006
   - python-dateutil=2.8.0=py_0
   - pytorch=0.4.1=py37_py36_py35_py27__9.0.176_7.1.2_2
@@ -63,32 +74,34 @@ dependencies:
   - pyyaml=3.13=py37h14c3975_1001
   - readline=7.0=hf8c457e_1001
   - s3transfer=0.2.1=py37_0
-  - setuptools=41.0.1=py37_0
+  - setuptools=41.2.0=py37_0
   - six=1.12.0=py37_1000
-  - soupsieve=1.9.3=py37_0
-  - sqlalchemy=1.3.7=py37h516909a_0
+  - soupsieve=1.9.4=py37_0
+  - sqlalchemy=1.3.8=py37h516909a_0
   - sqlite=3.28.0=h8b20d00_0
-  - tk=8.6.9=hed695b0_1002
-  - tqdm=4.34.0=py_0
-  - urllib3=1.25.3=py37_0
+  - tk=8.6.9=hed695b0_1003
+  - tqdm=4.36.1=py_0
+  - urllib3=1.25.6=py37_0
   - uwsgi=2.0.18=py37hf36b3d6_0
-  - werkzeug=0.15.5=py_0
+  - wcwidth=0.1.7=py_1
+  - werkzeug=0.16.0=py_0
   - wheel=0.33.6=py37_0
   - xz=5.2.4=h14c3975_1001
   - yaml=0.1.7=h14c3975_1001
-  - zlib=1.2.11=h516909a_1005
+  - zipp=0.6.0=py_0
+  - zlib=1.2.11=h516909a_1006
   - pip:
-    - ansible==2.8.4
-    - awscli==1.16.222
+    - ansible==2.8.5
+    - awscli==1.16.249
     - chardet==3.0.4
     - colorama==0.3.9
-    - flask-sqlalchemy==2.4.0
+    - flask-sqlalchemy==2.4.1
     - janome==0.3.9
     - jsonlines==1.2.0
     - libsass==0.19.2
     - mojimoji==0.0.8
     - psycopg2-binary==2.8.3
-    - pyasn1==0.4.6
+    - pyasn1==0.4.7
     - pypugjs==5.8.1
     - requests==2.22.0
     - rsa==3.4.2
