--- a/setup.cfg
+++ b/setup.cfg
@@ -8,10 +8,14 @@ known_third_party=
     botocore
     flask
     flask_sqlalchemy
+    janome,
     jsonlines
     mojimoji
     nltk
     sass
+    toml
+    torch
+    torchtext
 
 [tool:pytest]
 addopts = --verbose --cov=reporter
