--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,21 @@
 [flake8]
 max-line-length = 120
+
+[isort]
+multi_line_output=3
+known_third_party=
+    boto3
+    botocore
+    flask
+    flask_sqlalchemy
+    janome,
+    jsonlines
+    mojimoji
+    nltk
+    sass
+    toml
+    torch
+    torchtext
+
+[tool:pytest]
+addopts = --verbose --cov=reporter
