Update directory structure

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,6 +8,7 @@ omit =
     reporter/util/config.py
     reporter/webapp/__init__.py
     reporter/webapp/__main__.py
+    reporter/webapp/main.py
     reporter/webapp/chart.py
     reporter/webapp/human_evaluation.py
     reporter/webapp/search.py
