--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             - market-reporter-{{ checksum "Pipfile.lock" }}
       - run:
           name: Create an environment
-          command: pipenv sync --dev
+          command: pipenv install --dev
           environment:
             PIPENV_VENV_IN_PROJECT: 1
       - save_cache:
