--- a/Pipfile
+++ b/Pipfile
@@ -21,8 +21,6 @@ psycopg2 = "*"
 pytz = "*"
 tqdm = "*"
 urllib3 = "*"
-torch = "*"
-torchvision = "*"
 jsonlines = "*"
 libsass = "*"
 mojimoji = "*"
@@ -35,6 +33,8 @@ Flask = "*"
 SQLAlchemy = "*"
 Flask-SQLAlchemy = "*"
 janome = "*"
+torch = "==1.3.0"
+torchvision = "*"
 
 [requires]
 python_version = "3.7"
