--- a/Pipfile
+++ b/Pipfile
@@ -23,18 +23,18 @@ tqdm = "*"
 urllib3 = "*"
 jsonlines = "*"
 libsass = "*"
-mojimoji = "*"
 pypugjs = "*"
 s3transfer = "*"
 toml = "*"
-torchtext = "*"
 uWSGI = "*"
 Flask = "*"
 SQLAlchemy = "*"
 Flask-SQLAlchemy = "*"
 janome = "*"
 torch = "==1.3.0"
-torchvision = "*"
+torchtext = "==0.4.0"
+torchvision = "==0.4.1"
+neologdn = "*"
 
 [requires]
 python_version = "3.7"
